[package]
name = "aranet4"
version = "0.1.0"
edition = "2021"
authors = ["Logan Praneis <lpraneis@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.1"
rand = "0.8.5"
uuid = "0.8.2"
tokio = { version = "1", features = ["full"] }
byteorder = "1.4.3"
thiserror = "1.0"
chrono = "0.4.0"
futures = "0.3.21"
