[package]
name = "aranet4"
version = "0.1.0"
edition = "2021"
authors = ["Logan Praneis <lpraneis@gmail.com>"]
repository = "https://github.com/lpraneis/aranet4-rs"
license-file = "LICENSE"
keywords = ["aranet", "co2"]
description = "Read current and historical measurements from an Aranet4 CO2 Monitor over bluetooth"


[dependencies]
btleplug = "0.9.1"
uuid = "0.8.2"
tokio = { version = "1.21.1", features = ["rt", "macros"] }
byteorder = "1.4.3"
thiserror = "1.0"
chrono = "0.4.0"
futures = "0.3.21"
serde = { version = "1.0.144", features = ["derive"]}
bincode = "1.3.3"
serde_repr = "0.1.9"
